# sm64-fstbf-v2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake/: CompilerFlags.cmake
src/: CMakeLists.txt  formatting.hpp  main.cpp  platform.cpp  platform.hpp  surface.hpp  trig.cpp  trig.hpp  vmath.hpp
src/fst/: common.hpp
